--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* ====== Normalized ======*/
 body {
     /* Box model */
     margin: 0px;
@@ -5,46 +6,52 @@ body {
     /* Background */
     background-color: #141418;
     
-    /* Typeography */
+    /* Typography */
     font-size: 18px;
     color: #F4F4F5;
 }
 
-.header {
-    /* Box model */
-    margin-left: 20%;
-	margin-right: 20%;
-	padding: 2px;
-	
-	/* Border */
-    border-radius: 0px 50px 0px 50px;
-
-    /* Background */
-	background-color: #1E1E24;
-	
-	/* Typeography */
-	font-family: consolas;
-	font-size: 25px;
-	text-align: center;
-	color: white;
-	
-	/* Effects */
-	text-shadow: 2px 2px 5px #FF8800;
+/* [Link Styles] */
+a:link {
+    /* Typography*/
+    color: #FF8800;
 }
 
+a:visited {
+    /* Typography*/
+    color: #00C2D1;
+}
+
+a:hover {
+    /* Typography*/
+    color: #FFA94D;
+}
+
+a:active {
+    /* Typography*/
+    color: #3DFFFC;
+}
+
+/* ====== Typography ======*/
 h2 {
     /* Box model */
     margin-left: 1.5%;
     
-    /* Typeography */
+    /* Typography */
     font-size: 30px;
 }
 
 h3 {
-    /* Box model */
-    margin-left: ;
+    /* Typography */
+    font-size: 25px;
 }
 
+.para {
+    font-size: 20px;
+}
+
+
+/* ====== Reusable Components ======*/
 footer {
     /* Box model */
     width: 100%;
@@ -54,10 +61,30 @@ footer {
     background-color: #1E1E24;
 }
 
-div {
+/* ====== Layout Containers ======*/
+.container {
     /* Box model*/
     margin-left: 1.5%;
     margin-right: 1.5%;
+    margin-bottom: 1.5%;
+    padding-left: 1%;
+    padding-right: 1%;
+    
+    /* Border */
+    border-radius: 30px 30px 30px 30px;
+    
+    /* Background */
+    background-color: #1E1E24
+}
+
+.skills-container {
+    /* Box model*/
+    margin: 1.5%;
+    padding-left: 1%;
+    padding-right: 1%;
+    
+    /* Border */
+    border-radius: 30px;
     
     /* Background */
     background-color: #1E1E24
@@ -82,24 +109,25 @@ div {
     clear: both;
 }
 
-/* [Link Styles] */
+/* ====== Specific sections/pages ======*/
+.header {
+    /* Box model */
+    margin-left: 20%;
+	margin-right: 20%;
+	padding: 2px;
+	
+	/* Border */
+    border-radius: 0px 50px 0px 50px;
 
-a:link {
-    /* Typeography*/
-    color: #FF8800;
-}
-
-a:visited {
-    /* Typeography*/
-    color: #00C2D1:
-}
-
-a:hover {
-    /* Typeography*/
-    color: #FFA94D;
-}
-
-a:active {
-    /* Typeography*/
-    color: #3DFFFC;
+    /* Background */
+	background-color: #1E1E24;
+	
+	/* Typography */
+	font-family: Consolas, monospace;
+	font-size: 25px;
+	text-align: center;
+	color: white;
+	
+	/* Effects */
+	text-shadow: 2px 2px 5px #FF8800;
 }
