--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* ====== Normalized ======*/
+/* ====== Normalized ====== */
 * {
     box-sizing: border-box;
 }
@@ -19,6 +19,10 @@ body {
     body {
         font-size: 18px; /* your original size */
     }
+    
+    h1{
+        font-size: 50px;
+    }
 
     h2 {
         font-size: 40px;
@@ -29,7 +33,7 @@ body {
     }
 }
 
-/* [Link Styles] */
+/* ====== Link Styles ====== */
 a:link {
     /* Typography*/
     color: #FF8800;
@@ -50,7 +54,36 @@ a:active {
     color: #3DFFFC;
 }
 
-/* ====== Typography ======*/
+/* ====== Icons ====== */
+.fa {
+    padding: 0.5em;
+    width: 0.5em 1em;
+    text-align: center;
+    text-decoration: none;
+    color: white !important;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-linkedin{
+    background: #007bb5;
+    color: white;
+}
+
+.fa-youtube-play{
+    border-radius: 50%;
+    background: #bb0000;
+    color: white;
+}
+
+/* ====== Typography ====== */
+h1 {
+    /* Typography */
+    font-size: 50px;
+}
+
 h2 {
     /* Typography */
     font-size: 40px;
@@ -73,7 +106,7 @@ h3 {
 }
 
 
-/* ====== Reusable Components ======*/
+/* ====== Reusable Components ====== */
 .top-bar{
     display: flex;
     justify-content: space-between;
@@ -140,10 +173,36 @@ h3 {
     background-color: aquamarine;
 }
 
+.bottom-button{
+    /* Box model */
+    margin: 0.5rem;
+    padding: 1rem 2rem;
+    
+    /* Border */
+    border-radius: 25px 25px 25px 25px;
+
+    /* Background */
+    background-color: orange;
+    
+    /* Typography */
+    font-size: 1rem;
+    color: black;
+    
+    /* Effects & other */
+    white-space: nowrap; /* Keeps buttons on a single line */
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 footer {
     /* Box model */
     width: 100%;
     height: 100px;
+    padding: 0.5rem 2rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
     
     /* Background */
     background-color: #1E1E24;
@@ -154,12 +213,11 @@ footer {
   justify-content: center;
 }
 
-/* ====== Layout Containers ======*/
+/* ====== Layout Containers ====== */
 .container {
     /* Box model*/
     margin: 1.5%;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding: 1%;
     
     /* Border */
     border-radius: 30px 30px 30px 30px;
@@ -203,7 +261,7 @@ footer {
     }
 }
 
-/* ====== Hero Section ======*/
+/* ====== Hero Section ====== */
 .hero {
     display: flex;
     flex-wrap: wrap;
