--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* ====== Normalized ====== */
+/* ====== [Normalized] ====== */
 * {
     box-sizing: border-box;
 }
@@ -15,25 +15,7 @@ body {
     color: #F4F4F5;
 }
 
-@media (min-width: 768px) {
-    body {
-        font-size: 18px; /* your original size */
-    }
-    
-    h1{
-        font-size: 50px;
-    }
-
-    h2 {
-        font-size: 40px;
-    }
-
-    h3 {
-        font-size: 25px;
-    }
-}
-
-/* ====== Link Styles ====== */
+/* ====== [Link Styles] ====== */
 a:link {
     /* Typography*/
     color: #FF8800;
@@ -54,7 +36,7 @@ a:active {
     color: #3DFFFC;
 }
 
-/* ====== Icons ====== */
+/* ====== [Icons] ====== */
 .fa {
     padding: 0.5em;
     width: 0.5em 1em;
@@ -78,7 +60,7 @@ a:active {
     color: white;
 }
 
-/* ====== Typography ====== */
+/* ====== [Typography] ====== */
 h1 {
     /* Typography */
     font-size: 50px;
@@ -99,14 +81,8 @@ h3 {
     font-size: 1.5rem;
 }
 
-@media (min-width: 768px) {
-    .viewport-text {
-        font-size: 1.5vw;
-    }
-}
 
-
-/* ====== Reusable Components ====== */
+/* ====== [Reusable Components] ====== */
 .top-bar{
     display: flex;
     justify-content: space-between;
@@ -213,7 +189,7 @@ footer {
   justify-content: center;
 }
 
-/* ====== Layout Containers ====== */
+/* ====== [Layout Containers] ====== */
 .container {
     /* Box model*/
     margin: 1.5%;
@@ -246,22 +222,25 @@ footer {
     gap: 1rem;
 }
 
+.image-row {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.image-row img {
+    flex: 1 1 auto;
+    max-width: 100%;
+    height: auto;
+    border-radius: 40px;
+}
+
 .column, skills-column {
     /* Box model */
     flex: 1 1 100%;
 }
 
-@media (min-width: 768px) {
-    .column {
-        flex: 1 1 47%;
-    }
-    
-    .skills-column {
-        flex: 1 1 30%;
-    }
-}
-
-/* ====== Hero Section ====== */
+/* ====== [Hero Section] ====== */
 .hero {
     display: flex;
     flex-wrap: wrap;
@@ -280,4 +259,34 @@ footer {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
+}
+
+@media (min-width: 768px) {
+    body {
+        font-size: 18px; /* your original size */
+    }
+    
+    h1{
+        font-size: 50px;
+    }
+
+    h2 {
+        font-size: 40px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+    
+    .viewport-text {
+        font-size: 1.5vw;
+    }
+    
+    .column {
+        flex: 1 1 47%;
+    }
+    
+    .skills-column {
+        flex: 1 1 30%;
+    }
 }
